--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,6 +3,9 @@
         display: flex;
         justify-content: space-between;
         padding: 10px 0;
+        border-bottom: 1px solid #ececec;
+        background: #fff;
+
         &-list {
             display: flex;
         }
@@ -34,12 +37,16 @@
     }
 
     &__mid {
+        position: sticky;
+        top: -1px;
+        left: 0;
+        background: #fff;
+        width: 100%;
+        z-index: 99;
         display: flex;
         align-items: center;
         gap: 10px;
         padding: 10px 0;
-        border-top: 1px solid #ececec;
-        border-bottom: 1px solid #ececec;
         &-logo {
             max-width: 150px;
             min-width: 100px;
@@ -63,6 +70,29 @@
             align-items: center;
             flex: 1;
             padding: 16px 20px;
+            position: relative;
+            &-result {
+                position: absolute;
+                top: calc(100% + 2px);
+                left: 0;
+                width: 100%;
+                height: auto;
+                max-height: 300px;
+                overflow: scroll;
+                scrollbar-width: none;
+                padding: 10px;
+                background: #fff;
+                border-radius: 5px;
+                box-shadow: 3px 5px 10px #0002;
+                z-index: 9;
+                div {
+                    display: flex;
+                    align-items: center;
+                    p {
+                        font-size: 12px;
+                    }
+                }
+            }
             input {
                 border: none;
                 flex: 1;
@@ -91,8 +121,6 @@
             }
             sup {
                 padding: 2px 4px;
-                // min-width: 16px;
-                // height: 16px;
                 display: inline-block;
                 background: #3bb77e;
                 text-align: center;
@@ -104,7 +132,6 @@
             p {
                 color: #7e7e7e;
                 font-size: 12px;
-                // transform: translate(-10px, 0);
             }
         }
         @media (max-width: 1110px) {
@@ -119,17 +146,18 @@
                 gap: 3px;
             }
         }
-        @media (max-width: 850px) {
+        @media (max-width: 900px) {
             &-pages {
                 position: fixed;
                 left: 0;
                 bottom: 0;
                 width: 100%;
                 justify-content: space-evenly;
-                padding: 20px 0;
+                padding: 15px 0;
                 border-top: 1px solid #ececec;
                 z-index: 99;
                 background: #fff;
+                gap: 10px;
             }
         }
         @media (max-width: 530px) {
@@ -139,6 +167,11 @@
             &-search {
                 select {
                     display: none;
+                }
+            }
+            &-page {
+                svg {
+                    font-size: 15px;
                 }
             }
         }
@@ -158,6 +191,9 @@
         justify-content: space-between;
         padding: 10px 0;
         border-bottom: 1px solid #ececec;
+        border-top: 1px solid #ececec;
+        background: #fff;
+
         &-left {
             display: flex;
             align-items: center;
@@ -215,6 +251,11 @@
         }
         @media (max-width: 920px) {
             &-list {
+                display: none;
+            }
+        }
+        @media (max-width: 450px) {
+            &-right {
                 display: none;
             }
         }
