--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -9,6 +9,7 @@
         gap: 50px;
         text-wrap: nowrap;
         padding: 20px 0;
+        // overflow: auto;
     }
 
     &__categories {
@@ -120,6 +121,10 @@
         &:hover {
             opacity: 0.8;
         }
+        &:disabled {
+            background: #ddd;
+            cursor: no-drop;
+        }
     }
     @media (max-width: 1080px) {
         &__cards {
@@ -127,6 +132,14 @@
         }
     }
     @media (max-width: 700px) {
+        &__top {
+            flex-direction: column;
+            align-items: flex-start;
+            overflow: hidden;
+        }
+        &__categories {
+            width: 100%;
+        }
         &__cards {
             grid-template-columns: repeat(2, 1fr);
         }
